# YypetCY

./: .cdsrc.json  .cmake-format.yaml  .coderabbit.yml  .cspell.json  .env.dev  .env.local.sample  .envrc  .mocharc.json  01_kubernetes_beginner.md  404.html  ARCHITECTURE.md  AWS EC2 Pricing Plans.docx  Application.java  Cargo.toml  Flagger.md  Index.html  aboutUs.html  api_utils.py  consulting.html  contactus.html  deployment.yaml  paths.py  pom.xml  pyproject.toml  sample-midlet.java  streamlit_app.py  update_aws_sdk_cpp.sh
.github/workflows/: api-dev-workflow.yaml  azure-static-web-apps-white-cliff-0e42aad10.yml  rspress.yml
Ec2 instance code/: monte_carlo.py
Extras/: ace_step_api.json
backend/: .env.example
lab1/wsl-ubuntu-jenkins/: Readme.md
site/: index.html
